# MeidaPlayer

./: README.md
code/: CMakeLists.txt  FindAVFORMAT.cmake  test_playerPusherRtmp.cpp  test_playerPusherRtsp.cpp
linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake
linux_build/tests/: Makefile  cmake_install.cmake
src/Player/: PlayerBase.h  PlayerProxy.cpp
src/Rtmp/: RtmpPlayer.h
src/Rtsp/: RtspPlayer.cpp  RtspPlayer.h
tests/: CMakeLists.txt  YuvDisplayer.h  test_player.cpp  test_server.cpp
tests/client/: CMakeLists.txt  bmpmaker.cpp  bmpmaker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerpro.cpp  playerpro.h  playerwidget.cpp  playerwidget.h
tests/clientv2/: CMakeLists.txt  client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h
